--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,1 +1,7 @@
 org.gradle.jvmargs=-Xmx1536M
+android.enableR8=true
+#distributionUrl=https\://services.gradle.org/distributions/gradle-5.1.1-all.zip
+#distributionUrl=https\://services.gradle.org/distributions/gradle-5.4.1-all.zip
+#distributionUrl=https\://services.gradle.org/distributions/gradle-5.6.2-all.zip
+android.useAndroidX=true
+android.enableJetifier=true
