--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,11 @@
 name: viren_demo
 description: A new Flutter project.
 
+version: 1.0.0+1
+
+environment:
+  sdk: ">=2.1.0 <3.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
@@ -12,6 +17,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 
 # For information on the generic Dart part of this file, see the
